# byt

./: .gitignore  CMakeLists.txt  README.md  at90can32-testboard-pin-desc.txt  config.yaml  io-board.txt  mqttdash.json  sensorion.txt  thrift-configure-cmake.sh  tmpf  toolchain-bb.cmake
avr/bootloader/: Makefile  avrdude-flash.sh  bootloader.cpp
avr/fw/: Makefile  clock.h  gpio.cpp  gpio.h  log_debug.cpp  log_debug.h  main.cpp  ow.h  ow_sm.cpp  ow_sm.h  pwm16_at90.cpp  pwm16_at90.h  scd4x_sm.cpp  scd4x_sm.h  sensirion_common.h  sht11_main.cpp  sht11_sm.cpp  sht11_sm.h  sht11_swi2c.cpp  sht11_swi2c.h
avr/pwm/: Makefile  main.cpp
byt-gui/byt-gui/: byt-gui.pro  bytrequestclient.h  tcpconnection.cpp  tcpconnection.h  widget.cpp  widget.h
byt-gui/byt-gui/lbidich/: byttransport.h  channel.h  packet.h
bytd/: AppContainer.cpp  AppContainer.h  BBDigiOut.h  BytRequest.cpp  BytRequest.h  CMakeLists.txt  Elektromer.cpp  Elektromer.h  Event.h  Facade.cpp  Facade.h  I2cDiOut.cpp  I2cDiOut.h  ICore.h  IIo.h  IconnServer.h  Log.cpp  Log.h  MqttDigiOut.cpp  OnOffDevice.cpp  OnOffDevice.h  OpenTherm.cpp  OpenTherm.h  OtFrame.h  OwThermNet.cpp  OwThermNet.h  Pru.cpp  Pru.h  Pumpa.cpp  Pumpa.h  Subscription.h  TcpConnection.cpp  TcpConnection.h  Vypinace.cpp  Vypinace.h  ZweiKanalServer.cpp  ZweiKanalServer.h  build.sh  builder.cpp  builder.h  (+25 more)
bytd-tests/: CMakeLists.txt  test1.cpp
bytd/src/: .clang-format  AppContainer.cpp  AppContainer.h  BBDigiOut.cpp  BBDigiOut.h  DigiOutI2cExpander.cpp  DigiOutI2cExpander.h  Elektromer.cpp  Elektromer.h  Event.h  I2cDiOut.cpp  I2cDiOut.h  IIo.h  IMqttPublisher.h  IPwmDev.h  ImpulzyBase.cpp  ImpulzyBase.h  Kurenie.cpp  Kurenie.h  LightDimmable.cpp  LightDimmable.h  LightManager.cpp  LightManager.h  Log.cpp  Log.h  MqttDigiOut.cpp  MqttDigiOut.h  OnOffDevice.cpp  OnOffDevice.h  OpenTherm.cpp  OpenTherm.h  OtFrame.cpp  OtFrame.h  OwTempSensor.cpp  OwTempSensor.h  OwThermNet.cpp  OwThermNet.h  Plynomer.cpp  Plynomer.h  Pru.cpp  (+41 more)
bytd/utest/: CMakeLists.txt  kurenie.cpp  mqtt_topic.cpp
bytg/: bytg.pro  bytrequestclient.cpp  bytrequestclient.h  gen-req  tcpconnection.cpp  tcpconnection.h  widget.cpp  widget.h
bytg/lbidich/: byttransport.h  channel.h  iconnection.h  io.cpp  io.h  packet.cpp  packet.h
bytif/: indication.thrift  make.sh  request.thrift
docker/: Dockerfile  build.sh
misc/: m.m  opentherm-sniffer.cpp
owtherm/: Makefile  owtherm.c  owtherm.h  sm.c
plot/: .project  plot.pl
pru/: Makefile  common.h  env.sh  main.c  opentherm_sm.c  ow_sm.c  rpm_iface.h
publish-ip-addr/: check  get-current  ip-addr.txt  push
rekuperacia_fw/: main.c  reku.txt  reku_control_proto.h  reku_enum.h
script/: avrcanconf-devsimulator.py  backup-emmc.sh  docker-build.sh  docker-run.sh  dsview-daq-ot-frame-analyzer.py  plot-mqtt.py
script/bbpinmux-view/: pinmux-table.csv  view.py
script/deploy/bb/: BYTD.dtsi  BYTD.dtso  avrcanconf.py  beaglebone_devicetree.patch  config-pin.txt  db-env.sh  deploy-pru.sh  environment.txt  flash-and-init.sh  ha_mqtt_discovery.py  init.sh  ow-pru-pin.sh  predefined_romcodes.txt  rb.service  ventil4w.py
script/deploy/bb/avrcanconf/: run.py  sim.py
script/deploy/bb/avrcanconf/core/: bytcan.py  config.py  scd41.py
st2cpp/: CMakeLists.txt  b.sh  grammar.h  keywords.h  st2cpp.cpp
thermo_app/: Makefile  data.cpp  data.h  exporter.cpp  exporter.h  log_trace_debug.cpp  log_trace_debug.h  pgdbwrapper.cpp  therm.cpp  thread_util.cpp  thread_util.h
thermostat/: thermostat.pl
